# JibimbaScotty

./: JibimbaScotty.cabal  README.md
data/: commonSyns.txt  fpnAttributes.txt  fsnAttributes.txt  mpnAttributes.txt  msmpAttributes.txt  msnAttributes.txt  nouns.txt  npnAttributes.txt  nsnAttributes.txt
src/: Main.hs
