name:                JibimbaScotty
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jasminzukic/JibimbaScotty#readme
license:             BSD3
license-file:        LICENSE
author:              Jasmin Zukić
maintainer:          jasminzukic2@gmail.com
copyright:           2018 Jasmin Zukić
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable JibimbaScotty
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , random-shuffle
                     , scotty
                     , wai-extra
                     , wai-middleware-static
